--- a/_posts/2024-10-29-m3.md
+++ b/_posts/2024-10-29-m3.md
@@ -1,5 +1,5 @@
 ---
-title: 'Mini #3 - “A Seat at the Table”: 3D Printing Parametric Furniture Designs'
+title: 'Mini #3 - “A Seat at the Table”: 3D Printing Parametric Furniture Designs '
 date: 2024-10-29
 ---
 
@@ -42,4 +42,4 @@ Here are some sample results for this table design:
 Note: The fabricated variations are not neccarily from the ones shown above. 
 
 # 2. Task 2: Fabricate Your Designs With 3D Printing
-__ Comming Soon __ 
+Comming Soon
