--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -18,24 +18,32 @@ The goal of this project is to implement a random-shapes 2D-bin-packing algorith
 This problem can be formulated in many ways, the most interesting in terms of optimizing scrap utilization and waste minimization is: 
 ## Given a set of shapes S, and a set of boundry shapes B (assuming B is irregular scapes), what is the optimal subset of B to fit S with minimal waste? 
 But this could be difficult to tackle in less than a month so the problem we will tackle is a simplification of the form: 
-## 1. Given a set of shapes S what is the smallest rectangle r to fit S, and how? 
+### 1. Given a set of shapes S what is the smallest rectangle r to fit S, and how? 
 There are many research on 2d bin packing algorithms, some of which are mentioned in the related work section, and the goal is not to comeup with a better algorithm but to investigate the state-of-the-art algorithms and implement one. 
 The decision of what to implement will depend on optimality as well as algorithm simplicity (in terms of comprehention and implementation).
 The outcomes of this project would be as follows: 
-## 1. A table summarizing at least 3 algorithms including comments/notes on feasibilty or challenges or unclaraties. 
-## 2. A statement of the chosen algorithm to implement, along a justification. 
-## 3. A grasshopper/python implementation of the algorithm. 
-## 4. 3 attempts of lazer cutting a single set of shapes* with the following placements:  
-### 1. A simple bin-packing algorithm like max rectangle
-### 2. Manual arrangement
-### 3. Using the implented algorithm.
+### 1. A table summarizing at least 3 algorithms* including comments/notes on feasibilty or challenges or unclaraties. 
+### 2. A statement of the chosen algorithm to implement, along a justification. 
+### 3. A grasshopper/python implementation of the algorithm. 
+### 4. 3 attempts of lazer cutting a single set of shapes** with the following placements:  
+#### 1. Arangement with OpenNest
+#### 2. Manual arrangement
+#### 3. Arangement using the implemented algorithm.
 
-* The list of shapes could from the internet, from a past assignemnt, or a new design, depending on what I find best to test the algorithm.
+*The Algorithms do not need to be complicated "novel" ones from research papers, they could include simple algorithms too from forums or from mind. 
+**The list of shapes could from the internet, from a past assignemnt, or a new design, depending on what I find best to test the algorithm.
 
 # 2.Related work 
-## 1. 
-## 2. 
-## 3. 
+## 1. [Randomized greedy strategy with corner filling for the irregular 2D bin packing problem](http://old.math.nsc.ru/AP/benchmarks/Irregular%20bin%20packing/Randomized_greedy_strategy_with_corner_filling_for_the_irregular_2D_bin_packing_problem.pdf)
+## 2. [Optimal Linear Combination of Heuristic Strategies for 2D Rectangular Bin Packing Algorithms](https://ieeexplore.ieee.org/abstract/document/10709249?casa_token=RQdGzlyBirUAAAAA:cbHOn09LQPoCt5eAOa8MIeUhFetetkPgFKFYh97FtJFjJnjC5mdXwhw55CKCZPGe2bzB6_tw)
+## 3. [OpenNest Tutorial](https://parametrichouse.com/bin-packing-nesting/)
+## 4. [OpenNest Package page](https://www.food4rhino.com/en/app/opennest)
+## 5. [COMPAS_WOOD](https://www.food4rhino.com/en/app/compaswood) 
+
+1 and 2 are recent papers on approaches to the 2D bin packing problem, these include algorithms that I could consider for implementation. I did not read the papers yet as this is part of the "research phase" described in the timeline below. 
+3 and 4 are about OpenNest, a plugin tool for "2D polyline packing", which I will use to compare againt my implementation. 
+I am still investigating what algorithm this tool uses. 
+5 is a plug-in for wood joinary, which I may use in generating the set of shapes to fit in rectangle. 
 
 # 3.Timeline
 The Project has 3 main steps: research, implement, test. With about 20 days to complete (Nov 20th to Dec 11th), the planned timeline looks as follows:
@@ -43,9 +51,7 @@ The Project has 3 main steps: research, implement, test. With about 20 days to c
 |Task | Outcomes |Duration| Deadline|
 |------|----------|--------|---------|
 |Research | Table | 5 days| Nov 25|
-|------|----------|--------|---------|
 |Implement | Grasshopper script | 10 days| Dec 5th|
-|------|----------|--------|---------|
 |Test | Lazer Cuts | 5 days| Dec 10th|
 
 Note that the mid progress milestone, set on Dec 1st, falls in the middle of the "implement" step, which should meet the start of the debugging phase of the grasshopper script.
