--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -31,6 +31,8 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.jpeg" height="300"> 
 
 # 4. Task 4: Comparing slicers
+The lower 2 cylinders used the prusa slicer, the top one uses my slicer. You can see that mine has a build up of unwanted filamnet, I assume near where the extruder moves up a layer in each round. 
+This could be due to never pulling back the filamnet after extruding for each line. This could also explain why my cylinder has bumpy top (which is not so clear in the image) unlike the smooth prusa's top. 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
 
 # 5. EXTRA CREDIT  - To be updated. 
