--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -1,6 +1,5 @@
 ---
 title: 'Large #3 - “Travel through Another Dimension” 🚀'
- '
 date: 2024-11-12
 ---
 
@@ -19,10 +18,11 @@ This Assignment has 4 tasks and and 4 Extra credits:
 All related files, (including grasshopper file and the generated gcode for 1 and 5 layer cylinders) can be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3) 
 
 # 1. Task 1: Grasshopper slicer
+The stages are prelabled making the grasshopper flow below self explanatory. 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_.jpeg" height="300"> 
 
 # 2. Task 2:G-code generation with Python
-The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3)  
+The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3).   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.jpeg" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gen_gCode.jpeg" height="300"> 
 
@@ -32,7 +32,8 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 
 # 4. Task 4: Comparing slicers
 The lower 2 cylinders used the prusa slicer, the top one uses my slicer. You can see that mine has a build up of unwanted filamnet, I assume near where the extruder moves up a layer in each round. 
-This could be due to never pulling back the filamnet after extruding for each line. This could also explain why my cylinder has bumpy top (which is not so clear in the image) unlike the smooth prusa's top. 
+This could be due to never pulling back the filamnet after extruding for each line. This could also explain why my cylinder has bumpy top (which is not so clear in the image) unlike the smooth prusa's top.  
+
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
 
 # 5. EXTRA CREDIT  - To be updated. 
