--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -19,16 +19,16 @@ All related files, (including grasshopper file and the generated gcode for 1 and
 
 # 1. Task 1: Grasshopper slicer
 The stages are prelabled making the grasshopper flow below self explanatory. 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_.jpeg" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_.png" height="300"> 
 
 # 2. Task 2:G-code generation with Python
 The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3).   
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.jpeg" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gen_gCode.jpeg" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gen_gCode.png" height="300"> 
 
 # 3. Task 3: G-code testing
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.jpeg" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.jpeg" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.png" height="300"> 
 
 # 4. Task 4: Comparing slicers
 The lower 2 cylinders used the prusa slicer, the top one uses my slicer. You can see that mine has a build up of unwanted filamnet, I assume near where the extruder moves up a layer in each round. 
