--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -21,6 +21,10 @@ All related files, (including grasshopper file and the generated gcode for 1 and
 The stages are prelabled making the grasshopper flow below self explanatory. 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_.png" height="300"> 
 
+This results in the following slicing of the 1 and 5 layer cylinders respectively:   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1LSliced.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_5LSliced.png" height="300"> 
+the slicing lines have a 0.3 mm spacing so the extruded lines, which are 0.3mm thick, touch but not overlap ( 100% fill ).
 # 2. Task 2:G-code generation with Python
 The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3).   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
