--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -30,6 +30,8 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gen_gCode.png" height="300"> 
 
+The resulting gcode is exported at output-xl.gcode, where x in the number of layers. 
+
 # 3. Task 3: G-code testing
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.png" height="300"> 
@@ -40,4 +42,4 @@ This could be due to never pulling back the filamnet after extruding for each li
 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
 
-# 5. EXTRA CREDIT  - To be updated. 
+# 5. EXTRA CREDIT  -  Not done, yet. 
