--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -5,13 +5,13 @@ date: 2024-11-12
 
 # Description
 
-This Assignment has 4 tasks and and 4 Extra credits:
--Task 1: Grasshopper script slicing 2 cylinders (1 and 5 layers high, at 0.3mm/ layer)   
--Task 2: G-code generation.
--Task 3: Export and test G-code (before printing)
--Task 4: Compare own slicer to prusa slicer through printing output. 
--EC Part 1: Control infill density parameter for: 10%, 20%, 50%, and 100% - To be attempted later  
--EC Part 2: Optimize slicing toolpaths for the rectilinear infill pattern using serpentine connections - To be attempted later  
+This Assignment has 4 tasks and and 4 Extra credits:  
+-Task 1: Grasshopper script slicing 2 cylinders (1 and 5 layers high, at 0.3mm/ layer)    
+-Task 2: G-code generation.  
+-Task 3: Export and test G-code (before printing)   
+-Task 4: Compare own slicer to prusa slicer through printing output.   
+-EC Part 1: Control infill density parameter for: 10%, 20%, 50%, and 100% - To be attempted later     
+-EC Part 2: Optimize slicing toolpaths for the rectilinear infill pattern using serpentine connections - To be attempted later   
 -EC Part 3: Creates infill patterns and descriptions for the following patterns: concentric, honeycomb, hilbert curve. -To be attempted later  
 -EC Part 4: Slicing in vase mode with one tunable parameter corresponding to layer height. -To be attempted later.   
 
@@ -25,6 +25,12 @@ This results in the following slicing of the 1 and 5 layer cylinders respectivel
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1LSliced.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_5LSliced.png" height="300"> 
 the slicing lines have a 0.3 mm spacing so the extruded lines, which are 0.3mm thick, touch but not overlap ( 100% fill ).
+
+In the infill creation section, you can see that the spacing input depends on a division of 1/1 ( A/B), here B represnets the infill density, so B=1, shown above, represents 100% density. 
+So setting B to 0.25 for example yields a spacing of 4*layer_height which corresponds to 25% infill density. Below images show 10%, 20%, and 50% infill respectively. 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_10PInfill" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_20PInfill" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_50PInfill" height="300"> 
 # 2. Task 2:G-code generation with Python
 The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3).   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
@@ -42,4 +48,8 @@ This could be due to never pulling back the filamnet after extruding for each li
 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
 
-# 5. EXTRA CREDIT  -  Not done, yet. 
+# 5. EXTRA CREDIT 1: Control infill density - See part 1. 
+# 5. EXTRA CREDIT 2 -  Not done, yet. 
+# 5. EXTRA CREDIT 3 -  Not done, yet. 
+# 5. EXTRA CREDIT 4 -  Not done, yet. 
+
