--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -10,7 +10,7 @@ This Assignment has 4 tasks and and 4 Extra credits:
 -Task 2: G-code generation.  
 -Task 3: Export and test G-code (before printing)   
 -Task 4: Compare own slicer to prusa slicer through printing output.   
--EC Part 1: Control infill density parameter for: 10%, 20%, 50%, and 100% - To be attempted later     
+-EC Part 1: Control infill density parameter for: 10%, 20%, 50%, and 100%.   
 -EC Part 2: Optimize slicing toolpaths for the rectilinear infill pattern using serpentine connections - To be attempted later   
 -EC Part 3: Creates infill patterns and descriptions for the following patterns: concentric, honeycomb, hilbert curve. -To be attempted later  
 -EC Part 4: Slicing in vase mode with one tunable parameter corresponding to layer height. -To be attempted later.   
