--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -28,9 +28,9 @@ the slicing lines have a 0.3 mm spacing so the extruded lines, which are 0.3mm t
 
 In the infill creation section, you can see that the spacing input depends on a division of 1/1 ( A/B), here B represnets the infill density, so B=1, shown above, represents 100% density. 
 So setting B to 0.25 for example yields a spacing of 4*layer_height which corresponds to 25% infill density. Below images show 10%, 20%, and 50% infill respectively. 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_10PInfill" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_20PInfill" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_50PInfill" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_10PInfill.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_20PInfill.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_50PInfill.png" height="300"> 
 # 2. Task 2:G-code generation with Python
 The following 2 screenshorts show the completion of the gcode generation code, full code can be found in the python code element of the grasshopper file in the [L3 code files folder](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3).   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
