--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -48,7 +48,14 @@ This could be due to never pulling back the filamnet after extruding for each li
 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
 
-# 5. EXTRA CREDIT 1: Control infill density - See part 1. 
+# 5. EXTRA CREDIT 1: Control infill density 
+See part 1 for details. Below are the results of the Gcode simulaion for 10%,20%, 50%, and 100% infill densities, respectively.  
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.1_ZGV.png" height="300">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.2_ZGV.png" height="300">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.5_ZGV.png" height="300">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1_ZGV.png" height="300">   
+
+
 # 5. EXTRA CREDIT 2 -  Not done, yet. 
 # 5. EXTRA CREDIT 3 -  Not done, yet. 
 # 5. EXTRA CREDIT 4 -  Not done, yet. 
