--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -36,9 +36,11 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_move.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gen_gCode.png" height="300"> 
 
-The resulting gcode is exported at output-xl.gcode, where x in the number of layers. 
 
 # 3. Task 3: G-code testing
+
+The resulting gcode is exported using the pancake plugin, and saved as output-NumLayersl_DensityP_InfillTypeI.gcode. So output-1l_0.5P_rectI.gcode is the gcode for a single layer cylinder with 0.5% rectangular infill.
+figures below show that the code can be successfuly simulated with [ZupFe simulator](https://zupfe.velor.ca), and passes all 25 course tests. 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.png" height="300"> 
 
