--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -23,11 +23,10 @@ The stages are prelabled making the grasshopper flow below self explanatory.
 
 This results in the following slicing of the 1 and 5 layer cylinders respectively:   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1LSliced.png" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_5LSliced.png" height="300"> 
-the slicing lines have a 0.3 mm spacing so the extruded lines, which are 0.3mm thick, touch but not overlap ( 100% fill ).
-
-In the infill creation section, you can see that the spacing input depends on a division of 1/1 ( A/B), here B represnets the infill density, so B=1, shown above, represents 100% density. 
-So setting B to 0.25 for example yields a spacing of 4*layer_height which corresponds to 25% infill density. Below images show 10%, 20%, and 50% infill respectively. 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_5LSliced.png" height="300">   
+The slicing lines have a 0.3 mm spacing so the extruded lines, which are 0.3mm thick, touch but not overlap ( 100% fill ).
+In the infill creation section, you can see that the spacing input depends on a division of 1/1 ( A/B), here B represnets the infill density, so B=1, shown above, represents 100% density.
+So setting B to 0.25 for example yields a spacing of 4*layer_height which corresponds to 25% infill density. Images below show 10%, 20%, and 50% infill respectively.   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_10PInfill.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_20PInfill.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_50PInfill.png" height="300"> 
@@ -40,7 +39,12 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 # 3. Task 3: G-code testing
 
 The resulting gcode is exported using the pancake plugin, and saved as output-NumLayersl_DensityP_InfillTypeI.gcode. So output-1l_0.5P_rectI.gcode is the gcode for a single layer cylinder with 0.5% rectangular infill.
-figures below show that the code can be successfuly simulated with [ZupFe simulator](https://zupfe.velor.ca), and passes all 25 course tests. 
+below are snippets from the beginning and end of the resulting gcode, respectfuly. The blue lines represent extruding movements, while the purple lines show non-extruding transitions.  
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_start.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_end.png" height="300"> 
+
+
+figures below show that the code can be successfuly simulated with [ZupFe simulator](https://zupfe.velor.ca), and passes all 25 course tests.   
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.png" height="300"> 
 
@@ -52,10 +56,10 @@ This could be due to never pulling back the filamnet after extruding for each li
 
 # 5. EXTRA CREDIT 1: Control infill density 
 See part 1 for details. Below are the results of the Gcode simulaion for 10%,20%, 50%, and 100% infill densities, respectively.  
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.1_ZGV.png" height="300">   
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.2_ZGV.png" height="300">   
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.5_ZGV.png" height="300">   
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1_ZGV.png" height="300">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.1_ZGV.png" height="250">
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.2_ZGV.png" height="250">
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.5_ZGV.png" height="250">
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1_ZGV.png" height="250">   
 
 
 # 5. EXTRA CREDIT 2 -  Not done, yet. 
