adding EC parts

--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -11,9 +11,9 @@ This Assignment has 4 tasks and and 4 Extra credits:
 -Task 3: Export and test G-code (before printing)   
 -Task 4: Compare own slicer to prusa slicer through printing output.   
 -EC Part 1: Control infill density parameter for: 10%, 20%, 50%, and 100%.   
--EC Part 2: Optimize slicing toolpaths for the rectilinear infill pattern using serpentine connections - To be attempted later   
+-EC Part 2: Optimize slicing toolpaths for the rectilinear infill pattern using serpentine connections 
 -EC Part 3: Creates infill patterns and descriptions for the following patterns: concentric, honeycomb, hilbert curve. -To be attempted later  
--EC Part 4: Slicing in vase mode with one tunable parameter corresponding to layer height. -To be attempted later.   
+-EC Part 4: Slicing in vase mode with one tunable parameter corresponding to layer height.  
 
 All related files, (including grasshopper file and the generated gcode for 1 and 5 layer cylinders) can be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/L3) 
 
@@ -61,7 +61,45 @@ See part 1 for details. Below are the results of the Gcode simulaion for 10%,20%
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.5_ZGV.png" height="250">
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1_ZGV.png" height="250">   
 
-# 6. EXTRA CREDIT 2 -  Not done, yet. 
-# 7. EXTRA CREDIT 3 -  Not done, yet. 
-# 8. EXTRA CREDIT 4 -  Not done, yet. 
+# 6. EXTRA CREDIT 2: Optimize toolpath
+To attempt this first, I made the GH sequence below to flip the orientation/direction of every other infill line, so they allign better.   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_optimize.png" height="250"> 
+which resulted the following simulation and simulation path: 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1_path.png" height="250"> 
+While this is still much better the original shown below: 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base_path.png" height="250"> 
+The rubric reguires the path to be continues without stopping an extrusion which only required adding a "connect curves" component to connect the infil lines before merging them with the boundry lines. 
+The full GH script in code folder is an updated one that reflects this change. This also improved transitions without extrusions as seen below: 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2_path.png" height="250"> 
+
+# 7. EXTRA CREDIT 3: Create infill paterns
+For each of the 3 infill paterns, I only changed the infil generation section before merging the infill and boundry contours. 
+I based all 3 patterns on the infill-spacing paramater used to control density. 
+For each pattern, 100% density was computed such that infill lines touch each other. 
+for concentric curves this is straight forward as I mapped the infill lines spacing to the concentric shapes spacing as seen below
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_concentric.png" height="250"> 
+For the honeycomb, I mapped the spacing to the distance between 2 parallel sides of the hexagons. I also computed the needed dimensions to cover the contour ( in terms of number of hexagons)
+by simple trignometry: it is clear that in one direction hexagons are side to side, with the paralled side of the hexagon have a distance of 2*s/sqrt(3) (from phythagorian theorem on a 30-60 right triangle) where s is the length of the side of the hexagon. 
+on the other dimension, hexagons are aligned vertix to vertix, with the distance between vertices equal to 2*s (seen by connecting vertices to the polygon center and forming equalatiral triangles)
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_honeycomb.png" height="250"> 
+
+For the hilbert curve, I used the L-system defined in wikipidea. I also used the formula: stepSize = WindowSize/(2^order)-1 ( which I saw somewhere while looking as (2^order)+1 but "-" seemed more accutate.)
+I rounded the order up because it needs to be an integer, but changed the window size accordingly to fully cover the boundry contour. Here windoSize refers to the length of one dimention of the completed hilbert curve diagram, before intersecting it with the boundry contour. 
+To generate the curve I implemented the Lsystem in python to generate the points and lines. the python code can be found in the GH sketch, on the "Hilbert curve" group ( the GH file includes all tasks with 1 group per task/sub-task)
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_hilbertcurve.png" height="250"> 
+
+because they are highly detailed patterns, the full-density honeycomb and the hilbert curve worked better after lowering the cuve divition distance. So, and to avoid risk, I desided to print those with a lower density. 
+The simulations looked promising though as you can see here: 
+
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_concentric.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_honeycomb.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_hilbert100.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_hilbert.png" height="250"> 
+
+
+
+# 8. EXTRA CREDIT 4: vase mode 
 
