--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -39,59 +39,59 @@ The following 2 screenshorts show the completion of the gcode generation code, f
 # 3. Task 3: G-code testing
 
 The resulting gcode is exported using the pancake plugin, and saved as output-NumLayersl_DensityP_InfillTypeI.gcode. So output-1l_0.5P_rectI.gcode is the gcode for a single layer cylinder with 0.5% rectangular infill.
-below are snippets from the beginning and end of the resulting gcode, respectfuly. The blue lines represent extruding movements, while the purple lines show non-extruding transitions.  
+below are snippets from the beginning and end of the resulting gcode, respectfuly. The blue lines represent extruding movements, while the purple lines show non-extruding transitions.    
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_start.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcode_end.png" height="300"> 
 
 
-figures below show that the code can be successfuly simulated with [ZupFe simulator](https://zupfe.velor.ca), and passes all 25 course tests.   
+figures below show that the code can be successfuly simulated with [ZupFe simulator](https://zupfe.velor.ca), and passes all 25 course tests.     
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_ZGV.png" height="300"> 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_gcodeTest.png" height="300"> 
 
 # 4. Task 4: Comparing slicers
-The lower 2 cylinders used the prusa slicer, the top one uses my slicer. You can see that mine has a build up of unwanted filamnet, I assume near where the extruder moves up a layer in each round. 
-This could be due to never pulling back the filamnet after extruding for each line. This could also explain why my cylinder has bumpy top (which is not so clear in the image) unlike the smooth prusa's top.  
+The lower 2 cylinders used the prusa slicer, the top one uses my slicer. You can see that mine has a build up of unwanted filamnet, I assume near where the extruder moves up a layer in each round.   
+This could be due to never pulling back the filamnet after extruding for each line. This could also explain why my cylinder has bumpy top (which is not so clear in the image) unlike the smooth prusa's top.    
 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_compare_output.jpeg" height="300">   
 
 # 5. EXTRA CREDIT 1: Control infill density 
-See part 1 for details. Below are the results of the Gcode simulaion for 10%,20%, 50%, and 100% infill densities, respectively.  
+See part 1 for details. Below are the results of the Gcode simulaion for 10%,20%, 50%, and 100% infill densities, respectively.    
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.1_ZGV.png" height="250">
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.2_ZGV.png" height="250">
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_0.5_ZGV.png" height="250">
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_1_ZGV.png" height="250">   
 
 # 6. EXTRA CREDIT 2: Optimize toolpath
-To attempt this first, I made the GH sequence below to flip the orientation/direction of every other infill line, so they allign better.   
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_optimize.png" height="250"> 
+To attempt this first, I made the GH sequence below to flip the orientation/direction of every other infill line, so they allign better.       
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_optmize.png" height="250">   
 which resulted the following simulation and simulation path: 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1.png" height="250"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1_path.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1.png" height="250">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt1_path.png" height="250">   
 While this is still much better the original shown below: 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base.png" height="250"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base_path.png" height="250"> 
-The rubric reguires the path to be continues without stopping an extrusion which only required adding a "connect curves" component to connect the infil lines before merging them with the boundry lines. 
-The full GH script in code folder is an updated one that reflects this change. This also improved transitions without extrusions as seen below: 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2.png" height="250"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2_path.png" height="250"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base.png" height="250">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_base_path.png" height="250">   
+The rubric reguires the path to be continues without stopping an extrusion which only required adding a "connect curves" component to connect the infil lines before merging them with the boundry lines.   
+The full GH script in code folder is an updated one that reflects this change. This also improved transitions without extrusions as seen below:    
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2.png" height="250">   
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_opt2_path.png" height="250">   
 
 # 7. EXTRA CREDIT 3: Create infill paterns
-For each of the 3 infill paterns, I only changed the infil generation section before merging the infill and boundry contours. 
-I based all 3 patterns on the infill-spacing paramater used to control density. 
-For each pattern, 100% density was computed such that infill lines touch each other. 
-for concentric curves this is straight forward as I mapped the infill lines spacing to the concentric shapes spacing as seen below
+For each of the 3 infill paterns, I only changed the infil generation section before merging the infill and boundry contours.   
+I based all 3 patterns on the infill-spacing paramater used to control density.   
+For each pattern, 100% density was computed such that infill lines touch each other.     
+for concentric curves this is straight forward as I mapped the infill lines spacing to the concentric shapes spacing as seen below:  
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_concentric.png" height="250"> 
 For the honeycomb, I mapped the spacing to the distance between 2 parallel sides of the hexagons. I also computed the needed dimensions to cover the contour ( in terms of number of hexagons)
-by simple trignometry: it is clear that in one direction hexagons are side to side, with the paralled side of the hexagon have a distance of 2*s/sqrt(3) (from phythagorian theorem on a 30-60 right triangle) where s is the length of the side of the hexagon. 
-on the other dimension, hexagons are aligned vertix to vertix, with the distance between vertices equal to 2*s (seen by connecting vertices to the polygon center and forming equalatiral triangles)
+by simple trignometry: it is clear that in one direction hexagons are side to side, with the paralled side of the hexagon have a distance of 2*s/sqrt(3) (from phythagorian theorem on a 30-60 right triangle) where s is the length of the side of the hexagon.   
+on the other dimension, hexagons are aligned vertix to vertix, with the distance between vertices equal to 2*s (seen by connecting vertices to the polygon center and forming equalatiral triangles).  
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_honeycomb.png" height="250"> 
 
 For the hilbert curve, I used the L-system defined in wikipidea. I also used the formula: stepSize = WindowSize/(2^order)-1 ( which I saw somewhere while looking as (2^order)+1 but "-" seemed more accutate.)
-I rounded the order up because it needs to be an integer, but changed the window size accordingly to fully cover the boundry contour. Here windoSize refers to the length of one dimention of the completed hilbert curve diagram, before intersecting it with the boundry contour. 
-To generate the curve I implemented the Lsystem in python to generate the points and lines. the python code can be found in the GH sketch, on the "Hilbert curve" group ( the GH file includes all tasks with 1 group per task/sub-task)
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_hilbertcurve.png" height="250"> 
+I rounded the order up because it needs to be an integer, but changed the window size accordingly to fully cover the boundry contour. Here windoSize refers to the length of one dimention of the completed hilbert curve diagram, before intersecting it with the boundry contour.   
+To generate the curve I implemented the Lsystem in python to generate the points and lines. the python code can be found in the GH sketch, on the "Hilbert curve" group ( the GH file includes all tasks with 1 group per task/sub-task).  
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_hilbertCurve.png" height="250"> 
 
-because they are highly detailed patterns, the full-density honeycomb and the hilbert curve worked better after lowering the cuve divition distance. So, and to avoid risk, I desided to print those with a lower density. 
+because they are highly detailed patterns, the full-density honeycomb and the hilbert curve worked better after lowering the cuve divition distance. So, and to avoid risk, I desided to print those with a lower density.   
 The simulations looked promising though as you can see here: 
 
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_concentric.png" height="250"> 
@@ -101,5 +101,12 @@ The simulations looked promising though as you can see here:
 
 
 
-# 8. EXTRA CREDIT 4: vase mode 
+# 8. EXTRA CREDIT 4: 
+For a seamless vase-mode print, I discritirized the curves, then moved each point up a little such that the last point of each layer is shifted by layer height. 
+I then connected all the points, thus making a single smooth heilix from the boundry contours. The process is shown in the GH screenshot below.  
+
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_vase.png" height="250"> 
+This creates the following seamless simulation:  
+
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_sim_vase.png" height="250"> 
 
