--- a/_posts/2024-11-12-L3.md
+++ b/_posts/2024-11-12-L3.md
@@ -81,6 +81,7 @@ I based all 3 patterns on the infill-spacing paramater used to control density.
 For each pattern, 100% density was computed such that infill lines touch each other.     
 for concentric curves this is straight forward as I mapped the infill lines spacing to the concentric shapes spacing as seen below:  
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/L3_GH_concentric.png" height="250"> 
+The GH code shows an error with the offset component, but as you will see in the simulations below, this did not impactd, 
 For the honeycomb, I mapped the spacing to the distance between 2 parallel sides of the hexagons. I also computed the needed dimensions to cover the contour ( in terms of number of hexagons)
 by simple trignometry: it is clear that in one direction hexagons are side to side, with the paralled side of the hexagon have a distance of 2*s/sqrt(3) (from phythagorian theorem on a 30-60 right triangle) where s is the length of the side of the hexagon.   
 on the other dimension, hexagons are aligned vertix to vertix, with the distance between vertices equal to 2*s (seen by connecting vertices to the polygon center and forming equalatiral triangles).  
