--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -7,57 +7,18 @@ date: 2024-11-08
 
 This post is about the final project, for now it only contains the initial description and plan (the proposal), but it will be updated accordingly. 
 The post is divided as follows: 
--1. Proposed Project description and deliverables
--2. Related Work
--3. Expectd/Planned Timeline
+-1. Proposed Project description and goal
+-2. Walk-through of Functionality: Has multiple drawings, graphics, and code that demonstrate functionality of the system including outputs and parameters.
 
-A project-related code and files - if any-  will be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/Project) .   
+
+A project-related code and files - if any-  will be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/Project).   
 
 # 1.Project Description
-The goal of this project is to implement a random-shapes 2D-bin-packing algorithm in grasshopper/python to fit a given set of shapes in a minimal rectangle. 
-This problem can be formulated in many ways, the most interesting in terms of optimizing scrap utilization and waste minimization is: 
+The goal of this project is to creat 3D fabric following the method shown in the paper [DefeXtiles: 3D Printing Quasi-Woven Fabric via Under-Extrusion](https://www.media.mit.edu/publications/defextiles-publication/). Specufically, the plan is to recreate the projects and experiment with the extrusion multiplier and the printing speed - This could be through writing my own Gcode or using Prusa slicer settings. For ovious reasons I am resorting to the later. 
 
-**Given a set of shapes S, and a set of boundry shapes B (assuming B is irregular scapes), what is the optimal subset of B to fit S with minimal waste?**
+The plan is to test with a simple sheet and a skirt, then if that works try to print a more  complex design, like one of the miniature wedding dresses or a sheet of lace, as shown below. 
 
-But this could be difficult to tackle in less than a month so the problem we will tackle is a simplification of the form: 
-Given a set of shapes S what is the smallest rectangle r to fit S, and how?
-There are many research on 2d bin packing algorithms, some of which are mentioned in the related work section, and the goal is not to comeup with a better algorithm but to investigate the state-of-the-art algorithms and implement one. 
-The decision of what to implement will depend on optimality as well as algorithm simplicity (in terms of comprehention and implementation).
-The outcomes of this project would be as follows:   
- **1. A table summarizing at least 3 algorithms* including comments/notes on feasibilty or challenges or unclaraties.**  
 
- **2. A statement of the chosen algorithm to implement, along a justification.**   
+# 2.Functionality
 
- **3. A grasshopper/python implementation of the algorithm.**  
-
- **4. 3 attempts of lazer cutting a single set of shapes with the following placements:**    
-     1. Arangement with OpenNest  
-     2. Manual arrangement  
-     3. Arangement using the implemented algorithm. 
-
-*The Algorithms do not need to be complicated "novel" ones from research papers, they could include simple algorithms too from forums or from mind.   
-**The list of shapes could from the internet, from a past assignemnt, or a new design, depending on what I find best to test the algorithm.  
-
-# 2.Related work 
- 1. [Randomized greedy strategy with corner filling for the irregular 2D bin packing problem](http://old.math.nsc.ru/AP/benchmarks/Irregular%20bin%20packing/Randomized_greedy_strategy_with_corner_filling_for_the_irregular_2D_bin_packing_problem.pdf)  
- 2. [Optimal Linear Combination of Heuristic Strategies for 2D Rectangular Bin Packing Algorithms](https://ieeexplore.ieee.org/abstract/document/10709249?casa_token=RQdGzlyBirUAAAAA:cbHOn09LQPoCt5eAOa8MIeUhFetetkPgFKFYh97FtJFjJnjC5mdXwhw55CKCZPGe2bzB6_tw)  
- 3. [OpenNest Tutorial](https://parametrichouse.com/bin-packing-nesting/)  
- 4. [OpenNest Package page](https://www.food4rhino.com/en/app/opennest)  
- 5. [COMPAS_WOOD](https://www.food4rhino.com/en/app/compaswood)   
-
-1 and 2 are recent papers on approaches to the 2D bin packing problem, these include algorithms that I could consider for implementation. I did not read the papers yet as this is part of the "research phase" described in the timeline below.   
-3 and 4 are about OpenNest, a plugin tool for "2D polyline packing", which I will use to compare againt my implementation.   
-I am still investigating what algorithm this tool uses.   
-5 is a plug-in for wood joinary, which I may use in generating the set of shapes to fit in rectangle.  
-
-# 3.Timeline
-The Project has 3 main steps: research, implement, test. With about 20 days to complete (Nov 20th to Dec 11th), the planned timeline looks as follows:
-
-|Task | Outcomes |Duration| Deadline|
-|------|----------|--------|---------|
-|Research | Table | 5 days| Nov 25|
-|Implement | Grasshopper script | 10 days| Dec 5th|
-|Test | Lazer Cuts | 5 days| Dec 10th|
-
-Note that the mid progress milestone, set on Dec 1st, falls in the middle of the "implement" step, which should meet the start of the debugging phase of the grasshopper script.
 
