--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -5,7 +5,7 @@ date: 2024-11-08
 
 # Description
 
-This post is about the final project, for now it only contains the initial description and plan (the proposal), but it will be updated accordingly. 
+This post is about the final project, for now it only contains the initial description and plan, but it will be updated accordingly. 
 The post is divided as follows: 
 -1. Proposed Project description and goal
 -2. Walk-through of Functionality: Has multiple drawings, graphics, and code that demonstrate functionality of the system including outputs and parameters.
@@ -14,11 +14,21 @@ The post is divided as follows:
 A project-related code and files - if any-  will be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/Project).   
 
 # 1.Project Description
-The goal of this project is to creat 3D fabric following the method shown in the paper [DefeXtiles: 3D Printing Quasi-Woven Fabric via Under-Extrusion](https://www.media.mit.edu/publications/defextiles-publication/). Specufically, the plan is to recreate the projects and experiment with the extrusion multiplier and the printing speed - This could be through writing my own Gcode or using Prusa slicer settings. For ovious reasons I am resorting to the later. 
+The goal of this project is to creat 3D fabric following the method shown in the paper [DefeXtiles: 3D Printing Quasi-Woven Fabric via Under-Extrusion](https://www.media.mit.edu/publications/defextiles-publication/).
 
-The plan is to test with a simple sheet and a skirt, then if that works try to print a more  complex design, like one of the miniature wedding dresses or a sheet of lace, as shown below. 
+Specufically, the plan is to recreate some of the projects and experiment with the extrusion multiplier and the printing speed - This could be through writing my own Gcode or using Prusa slicer settings. For ovious reasons I am resorting to the later. The below image show sample projects from the paper - not all done with PLA so I will only consider PLA-based designs. 
+The figure below, from the paper, can be used to select the extrusion multiplier and the printing speed. These 2 are the main parameters of the project, as design parameters are to be chosen later depending on the chosen design. 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_printParams" height="300"> 
 
 
-# 2.Functionality
+The plan is to test with a simple sheet and a skirt, then if that works try to print a more  complex design, like a sheet of lace or one of the miniature wedding dresses from the paper (or similar), as shown below. 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_lace" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_dress" height="300"> 
+
+
+# 2.Functionality - A plan 
+To generate the lace pattern, I tried following [this tutorial](https://www.youtube.com/watch?v=PGbYo4FTkOQ) to convert a lace image into a grasshopper gepmetry instead of creating the design from scratch. This is still under construction. 
+
+The plan is to start experimenting with printing settings on Monday Dec 2nd, and to start with 2 basic shapes: a square that is a single layer high, and a cylinder that is a single layer thick. All attempted designs will be in a single grasshopper file [here]()
 
 
