mid progress, fix img

--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -18,12 +18,12 @@ The goal of this project is to creat 3D fabric following the method shown in the
 
 Specufically, the plan is to recreate some of the projects and experiment with the extrusion multiplier and the printing speed - This could be through writing my own Gcode or using Prusa slicer settings. For ovious reasons I am resorting to the later. The below image show sample projects from the paper - not all done with PLA so I will only consider PLA-based designs. 
 The figure below, from the paper, can be used to select the extrusion multiplier and the printing speed. These 2 are the main parameters of the project, as design parameters are to be chosen later depending on the chosen design. 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_printParams" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_printParams.png" height="300"> 
 
 
 The plan is to test with a simple sheet and a skirt, then if that works try to print a more  complex design, like a sheet of lace or one of the miniature wedding dresses from the paper (or similar), as shown below. 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_lace" height="300"> 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_dress" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_lace.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_dress.png" height="300"> 
 
 
 # 2.Functionality - A plan 
