mid progress, fix img correctness

--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -11,7 +11,7 @@ The post is divided as follows:
 -2. Walk-through of Functionality: Has multiple drawings, graphics, and code that demonstrate functionality of the system including outputs and parameters.
 
 
-A project-related code and files - if any-  will be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/Project).   
+A project-related code files -if any-  will be found [here](https://github.com/RazanAl/CSCI-7000-Computational-Fabrication/tree/main/code/Project).   
 
 # 1.Project Description
 The goal of this project is to creat 3D fabric following the method shown in the paper [DefeXtiles: 3D Printing Quasi-Woven Fabric via Under-Extrusion](https://www.media.mit.edu/publications/defextiles-publication/).
@@ -27,8 +27,14 @@ The plan is to test with a simple sheet and a skirt, then if that works try to p
 
 
 # 2.Functionality - A plan 
-To generate the lace pattern, I tried following [this tutorial](https://www.youtube.com/watch?v=PGbYo4FTkOQ) to convert a lace image into a grasshopper gepmetry instead of creating the design from scratch. This is still under construction. 
+To generate the lace pattern, I tried following [this tutorial](https://www.youtube.com/watch?v=PGbYo4FTkOQ) to convert a lace image (found online) into a grasshopper gepmetry instead of creating the design from scratch. 
+The desing I picked is highly detailed as seen below:
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_laceDesign.png" height="300"> 
+So from the way it looks in Rhino as seen below, I doubt it will look good once done. 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_GH_lace.png" height="300"> 
+Hence I am looking for a simpler lace pattern that is still nicelooking. 
 
-The plan is to start experimenting with printing settings on Monday Dec 2nd, and to start with 2 basic shapes: a square that is a single layer high, and a cylinder that is a single layer thick. All attempted designs will be in a single grasshopper file [here]()
+
+The plan is to start experimenting with printing settings on Monday Dec 2nd, and to start with 2 basic shapes: a square that is a single layer high, and a cylinder that is a single layer thick. 
 
 
