mid progress, fix img correctness

--- a/_posts/2024-11-08-project.md
+++ b/_posts/2024-11-08-project.md
@@ -31,7 +31,7 @@ To generate the lace pattern, I tried following [this tutorial](https://www.yout
 The desing I picked is highly detailed as seen below:
 <img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_laceDesign.jpg" height="300"> 
 So from the way it looks in Rhino as seen below, I doubt it will look good once done. 
-<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_GH_lace.png" height="300"> 
+<img src="https://raw.githubusercontent.com/RazanAl/CSCI-7000-Computational-Fabrication/refs/heads/main/imgs/proj_GH_lace.jpeg" height="300"> 
 Hence I am looking for a simpler lace pattern that is still nicelooking. 
 
 
